syntax = "proto3";
package adder;

service Adder { rpc Add(AddRequest) returns (AddResponse); }

message AddRequest { uint32 i = 1; }

message AddResponse { uint32 n = 1; }